--- a/.env
+++ b/.env
@@ -4,6 +4,12 @@ remoteAppIDs = '["react-app"]'
 BASE_URL = "http://localhost:5173"
 API_ENDPOINT = "/api/v2/"
 
+#server Config
+appName = studioM
+server = studioM_server
+globalPath = public/files/global
+privatePath = public/files/auth
+
 #database profile
 DB_HOST = localhost
 DB_PORT = 5432
