--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "debug": "node --inspect server",
     "db:sync": "node src/server/database/scripts/tablesDBsync.js",
     "db:tup": "node src/server/database/scripts/defaultTablesUp",
-    "db:init": "npm run db:sync && npm run db:tup"
+    "db:init": "npm run db:sync && npm run db:tup",
+    "email:debug": "NODE_DEBUG=email-templates node email.js"
   },
   "dependencies": {
     "@americanexpress/react-seo": "^1.4.2",
     "@koa/cors": "^4.0.0",
+    "@koa/multer": "^3.0.0",
     "@koa/router": "^12.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
@@ -27,18 +29,21 @@
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "email-templates": "^10.0.1",
     "frupal": "^0.9.25",
     "joi": "^17.6.4",
+    "joi-phone-number": "^5.1.1",
     "koa": "^2.13.4",
     "koa-body": "^6.0.1",
     "koa-compose": "^4.1.0",
     "koa-connect": "^2.1.0",
     "koa-jwt": "^4.0.3",
     "koa-logger": "^3.2.1",
-    "koa-passport": "^5.0.0",
+    "koa-passport": "^4.1.4",
     "koa-session": "^6.2.0",
     "koa-static-server": "^1.5.2",
     "koa-swagger-decorator": "^1.8.6",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
@@ -48,22 +53,27 @@
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "pug": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^1.4.1",
     "react-icons": "^4.6.0",
     "react-qr-code": "^2.0.8",
     "react-router-dom": "^6.4.2",
-    "react-select": "^5.5.7",
+    "react-select": "^5.6.0",
+    "react-toastify": "^9.1.1",
     "regenerator-runtime": "^0.13.10",
     "sequelize": "^6.25.3",
     "serve-static": "^1.15.0",
+    "sharp": "^0.31.2",
     "validator": "^13.7.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/koa__multer": "^2.0.4",
     "@types/koa__router": "^12.0.0",
     "@types/koa-static-server": "^1.5.0",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
