--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ API_ENDPOINT = "/api/v2/"
 #server Config
 appName = studioM
 server = studioM_server
+tempFolder = public/files/auth/temp
 globalPath = public/files/global
 privatePath = public/files/auth
 
