Early recovery update to fix lost code in system crash

--- a/.env
+++ b/.env
@@ -14,9 +14,9 @@ privatePath = public/files/auth
 #database profile
 DB_HOST = localhost
 DB_PORT = 5432
-DB_USER = akin
-DB_PASS = root
-DB_NAME = thincity
+DB_USER = postgres
+DB_PASS = postgres
+DB_NAME = studiom
 
 #cookie key
 COOKIE_IDENTIFIER = sess15672hj
