--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "studiom",
+  "name": "greyBox",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -43,7 +43,6 @@
     "koa-body": "^6.0.1",
     "koa-compose": "^4.1.0",
     "koa-connect": "^2.1.0",
-    "koa-jwt": "^4.0.3",
     "koa-logger": "^3.2.1",
     "koa-passport": "^4.1.4",
     "koa-session": "^6.2.0",
@@ -81,7 +80,7 @@
     "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react-swc": "^3.0.1",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.26.0",
     "eslint-config-react-app": "^7.0.1",
@@ -89,6 +88,6 @@
     "tailwindcss": "^3.2.1",
     "terser": "^5.15.1",
     "typescript": "^4.6.4",
-    "vite": "^3.2.0"
+    "vite": "^4.0.4"
   }
 }
